--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,9 +15,6 @@ html.no-scroll body {
     font-family: 'Karla', sans-serif;
     font-size: 20px;
 
-    scrollbar-width: none;
-    // scrollbar-color: #FD5B4F #dddddd00;
-
     scroll-behavior: smooth;
     text-align: left;
     cursor: default;
